--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,7 @@
 # to fit your needs!
 ################################################
 
-
-
+.env
 
 ################################################
 # Local Configuration
