--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "dotenv": "^4.0.0",
     "ejs": "2.3.4",
+    "eve-sso-simple": "^2.0.1",
     "eve-swagger-simple": "^1.1.0",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
