--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "async": "2.1.4",
     "dotenv": "^4.0.0",
     "ejs": "2.3.4",
     "eve-sso-simple": "^2.0.1",
@@ -22,10 +23,14 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "lodash": "3.10.1",
     "rc": "1.0.1",
-    "sails": "~0.12.13",
+    "sails": "^1.0.0-45",
     "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.12.2"
+    "sails-hook-grunt": "^1.0.8",
+    "sails-hook-orm": "^2.0.0-22",
+    "sails-hook-sockets": "^1.5.1",
+    "sails-mongo": "^1.0.0-11"
   },
   "scripts": {
     "debug": "node debug app.js",
