--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "ascent",
-  "private": true,
+  "name": "arbiter",
+  "private": false,
   "version": "0.0.0",
-  "description": "a Sails application",
-  "keywords": [],
+  "description": "A high-performance, WebSocket-compatible server interface to the EVE Swagger API.",
+  "keywords": [
+    "eve",
+    "eveonline",
+    "esi",
+    "swagger"
+  ],
   "dependencies": {
     "async": "2.1.4",
     "dotenv": "^4.0.0",
     "eve-sso-simple": "^2.0.1",
     "eve-swagger-simple": "^1.1.0",
-    "grunt": "1.0.1",
-    "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-coffee": "1.0.0",
-    "grunt-contrib-concat": "1.0.1",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
-    "grunt-contrib-jst": "1.0.0",
-    "grunt-contrib-less": "1.3.0",
-    "grunt-contrib-uglify": "1.0.1",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
     "lodash": "3.10.1",
     "rc": "1.0.1",
@@ -37,8 +30,8 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/doug/ascent.git"
+    "url": "git://github.com/dougestey/arbiter.git"
   },
-  "author": "doug",
-  "license": ""
+  "author": "doug.estey@gmail.com",
+  "license": "MIT"
 }
