--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "eve-sso-simple": "^2.0.1",
     "eve-swagger-simple": "^1.1.0",
     "include-all": "^1.0.0",
+    "kue": "^0.11.6",
     "lodash": "3.10.1",
     "rc": "1.0.1",
+    "redis": "^2.8.0",
     "sails": "^1.0.0-45",
     "sails-hook-grunt": "^1.0.8",
     "sails-hook-orm": "^2.0.0-22",
