--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "include-all": "^1.0.0",
     "kue": "^0.11.6",
     "lodash": "3.10.1",
+    "qs": "^6.5.1",
     "rc": "1.0.1",
     "redis": "^2.8.0",
+    "request": "^2.83.0",
     "sails": "^1.0.0-45",
     "sails-hook-grunt": "^1.0.8",
     "sails-hook-orm": "^2.0.0-22",
