--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node --max_old_space_size=4096 app.js"
   },
   "main": "app.js",
   "repository": {
