--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "async": "2.1.4",
+    "debounce": "^1.1.0",
     "dotenv": "^4.0.0",
     "eve-sso-simple": "^2.0.1",
     "eve-swagger-simple": "^1.1.0",
