--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "sails-hook-grunt": "^1.0.8",
     "sails-hook-orm": "^2.0.0-22",
     "sails-hook-sockets": "^1.5.1",
-    "sails-mongo": "^1.0.0-11"
+    "sails-mongo": "^1.0.0-11",
+    "sails.io.js": "^1.2.0",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "debug": "node debug app.js",
