--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ ESI_CLIENT_ID=
 ESI_CLIENT_SECRET=
 BOOTSTRAP_DB=true
 BASE_URL=http://localhost:8080
+SENTINEL_URL=http://localhost:8081
+SSL_ENABLED=false
