--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "async": "2.1.4",
+    "connect-redis": "^3.3.3",
     "debounce": "^1.1.0",
     "dotenv-safe": "^5.0.1",
     "eve-sso-simple": "^2.0.1",
