use forks instead of essodev repos

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "connect-redis": "^3.3.3",
     "debounce": "^1.1.0",
     "dotenv-safe": "^5.0.1",
-    "eve-sso-simple": "^2.0.1",
-    "eve-swagger-simple": "^1.1.0",
+    "eve-sso-simple": "https://github.com/dougestey/eve-sso-simple",
+    "eve-swagger-simple": "https://github.com/dougestey/eve-swagger-simple",
     "include-all": "^1.0.0",
     "kue": "^0.11.6",
     "lodash": "3.10.1",
