--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ ESI_CLIENT_ID=
 ESI_CLIENT_SECRET=
 BOOTSTRAP_DB=true
 BASE_URL=http://localhost:8080
-SENTINEL_URL=http://localhost:8081
+CLIENT_URL=http://localhost:4200
+SENTINEL_URL=https://arbiter.gloss.space/api/sentinel
 SSL_ENABLED=false
