--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sails-hook-orm": "^2.0.0-22",
     "sails-hook-sockets": "^1.5.1",
     "sails-mongo": "^1.0.0-11",
+    "sails-postgresql": "^1.0.1",
     "sails.io.js": "^1.2.0",
     "socket.io-client": "^2.0.4",
     "socket.io-redis": "^5.2.0"
