--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ESI_CLIENT_ID=
 ESI_CLIENT_SECRET=
 BOOTSTRAP_DB=true
+FLUSH_REDIS=false
 BASE_URL=http://localhost:8080
 CLIENT_URL=http://localhost:4200
 SENTINEL_URL=https://arbiter.gloss.space/api/sentinel
