--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 ESI_CLIENT_ID=
 ESI_CLIENT_SECRET=
-BOOTSTRAP_DB=true
-FLUSH_REDIS=false
 BASE_URL=http://localhost:8080
 CLIENT_URL=http://localhost:4200
 SENTINEL_URL=https://arbiter.gloss.space/api/sentinel
+KUE_PORT=6575
+REDIS_PORT=6389
+FLUSH_REDIS=false
+DEV_MIGRATION_STRATEGY=alter
 SSL_ENABLED=false
