--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,5 @@ CLIENT_URL=http://localhost:4200
 SENTINEL_URL=https://arbiter.gloss.space/api/sentinel
 KUE_PORT=6575
 REDIS_PORT=6389
-FLUSH_REDIS=false
+FLUSH_REDIS_ON_BOOT=false
 DEV_MIGRATION_STRATEGY=alter
-SSL_ENABLED=false
