beta server support, job cleanup

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ ESI_CLIENT_ID=
 ESI_CLIENT_SECRET=
 BASE_URL=http://localhost:8080
 CLIENT_URL=http://localhost:4200
+CLIENT_BETA_URL=
 SENTINEL_URL=https://arbiter.gloss.space/api/sentinel
 KUE_PORT=6575
 REDIS_PORT=6389
