--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arbiter",
   "private": false,
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A high-performance, WebSocket-compatible server interface to the EVE Swagger API.",
   "keywords": [
     "eve",
@@ -28,7 +28,7 @@
     "sails-hook-grunt": "^1.0.8",
     "sails-hook-orm": "^2.0.0-22",
     "sails-hook-sockets": "^1.5.1",
-    "sails-postgresql": "^1.0.1",
+    "sails-postgresql": "https://github.com/dougestey/sails-postgresql",
     "sails.io.js": "^1.2.0",
     "socket.io-client": "^2.0.4",
     "socket.io-redis": "^5.2.0"
